BJS2-10405 - Took into account comments on the code